@@ -67,10 +67,12 @@ def annotate_file(branch, rev_id, file_id, to_file=None):
 if __name__ == '__main__':
     from bzrlib.branch import Branch
     from bzrlib.trace import enable_default_logging
+    from bzrlib.workingtree import WorkingTree
 
     enable_default_logging()
     b = Branch.open_containing(sys.argv[1])
-    rp = b.relpath(sys.argv[1])
+    tree = WorkingTree(b.base, b)
+    rp = tree.relpath(sys.argv[1])
     tree = b.revision_tree(b.last_revision())
     file_id = tree.inventory.path2id(rp)
     file_version = tree.inventory[file_id].revision
